[package]
name = "sqlite-to-drawio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rusqlite = "0.31.0"
drawio_uml = { git = "https://github.com/dmitryvm1/drawio-uml"}